# interval

./: .gitignore  CMakeLists.txt
3rd/: CMakeLists.txt
3rd/matrix_lib/: CMakeLists.txt  jama_eig.h  jama_lu.h  tnt_array1d.h  tnt_fortran_array1d.h  tnt_sparse_matrix_csr.h
src/: CMakeLists.txt  box.cpp  box.h  iboolean.cpp  iboolean.h  imatrix.cpp  imatrix.h  interval.cpp  interval.h  rmatrix.cpp  rmatrix.h
